sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:12: error: type mismatch;
 found   : Unit
 required: Int
    if (ecart>1) ecart = ecart = (ecart.toDouble / 1.3).toInt;
                               ^